--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -65,6 +65,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "f, ax = plt.subplots(nrows=48, ncols=1, figsize=(15, 200))\n",
+    "\n",
+    "for i, column in enumerate(file.columns[1:49]):\n",
+    "    sns.lineplot(x=file['Datum i vrijeme'], y=file[column].fillna(method='ffill'), ax=ax[i], color='dodgerblue')\n",
+    "    ax[i].set_title('Feature: {}'.format(column), fontsize=10)\n",
+    "    ax[i].set_ylabel(ylabel=column, fontsize=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file[:46].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file=file.drop(['Vodomjer hidrant 10058705Voda (m3)', 'Brojilo el.energije ko 46621646El.energija VT (kWh)', 'Brojilo el.energije ko 46621646El.energija MT (kWh)','Brojilo el.energije po 38878959El.energija VT (kWh)',\n",
+    "       'Brojilo el.energije po 38878959El.energija MT (kWh)',\n",
+    "       'Brojilo el.energije kl 46868995El.energija VT (kWh)',\n",
+    "       'Brojilo el.energije kl 46868995El.energija MT (kWh)', 'Kalorimetar 2 39024724Topl.energija (MWh)','Kalorimetar 3 39024787Temp.pol.voda (°C)','Kalorimetar 3 39024787Temp.pov.voda (°C)'],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file.to_excel(\"Merged files_1.xlsx\", index=False)"
    ]
   },
@@ -83,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X=file[file.columns[46:]].drop(['Plinomjer zap.zgrada 20526377Plin (m3)'],axis=1)"
+    "X=file[file.columns[36:]].drop(['Plinomjer zap.zgrada 20526377Plin (m3)'],axis=1)"
    ]
   },
   {
@@ -353,8 +388,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for col in columns:\n",
-    "    feat_and_lab[col] = feat_and_lab[col].interpolate()\n"
+    "for col in feat_and_lab.columns:\n",
+    "    feat_and_lab[col] = feat_and_lab[col].interpolate(method=\"bfill\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feat_and_lab.isna().sum()"
    ]
   },
   {
@@ -364,9 +408,18 @@
    "outputs": [],
    "source": [
     "column1=[\"Datum i vrijeme\",\"Temp.senzor vanj.1 25000099Temperatura (°C)\",\"Plinomjer ist.zgrada 00062313Plin (m3)\",\"Plinomjer zap.zgrada 20526377Plin (m3)\",\"Plin, m3\",\"Kalorimetar 1 39024788Topl.energija (MWh)\",\"Kalorimetar 3 39024787Topl.energija (MWh)\",\"Kalorimetar, (MWh)\"]\n",
-    "downsample = feat_and_lab[column1].resample('7D', on=\"Datum i vrijeme\").mean()\n",
+    "downsample = feat_and_lab[column1].resample(\"7D\", on=\"Datum i vrijeme\").mean()\n",
     "\n",
     "feat_and_lab_1 = downsample.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feat_and_lab_1.isna().sum()"
    ]
   },
   {
@@ -411,7 +464,7 @@
     "]\n",
     "\n",
     "for column in core_columns:\n",
-    "    decomp = seasonal_decompose(feat_and_lab_1[column], period=52, model='additive', extrapolate_trend='freq')\n",
+    "    decomp = seasonal_decompose(feat_and_lab_1[column], period=27, model='additive', extrapolate_trend='freq')\n",
     "    feat_and_lab_1[f\"{column}_trend\"] = decomp.trend\n",
     "    feat_and_lab_1[f\"{column}_seasonal\"] = decomp.seasonal"
    ]
@@ -422,26 +475,319 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(ncols=2, nrows=4, sharex=True, figsize=(16,8))\n",
+    "fig, ax = plt.subplots(ncols=len(core_columns), nrows=4, sharex=True, figsize=(20,8))\n",
     "\n",
-    "for i, column in enumerate(['Temp.senzor vanj.1 25000099Temperatura (°C)',\"Plinomjer ist.zgrada 00062313Plin (m3)\"]):\n",
+    "for i, column in enumerate(core_columns):\n",
     "    \n",
     "    res = seasonal_decompose(feat_and_lab_1[column], freq=52, model='additive', extrapolate_trend='freq')\n",
     "\n",
     "    ax[0,i].set_title('Decomposition of {}'.format(column), fontsize=16)\n",
     "    res.observed.plot(ax=ax[0,i], legend=False, color='dodgerblue')\n",
-    "    ax[0,i].set_ylabel('Observed', fontsize=14)\n",
+    "    ax[0,i].set_ylabel('Observed', fontsize=7)\n",
     "\n",
     "    res.trend.plot(ax=ax[1,i], legend=False, color='dodgerblue')\n",
-    "    ax[1,i].set_ylabel('Trend', fontsize=14)\n",
+    "    ax[1,i].set_ylabel('Trend', fontsize=7)\n",
     "\n",
     "    res.seasonal.plot(ax=ax[2,i], legend=False, color='dodgerblue')\n",
-    "    ax[2,i].set_ylabel('Seasonal', fontsize=14)\n",
+    "    ax[2,i].set_ylabel('Seasonal', fontsize=7)\n",
     "    \n",
     "    res.resid.plot(ax=ax[3,i], legend=False, color='dodgerblue')\n",
-    "    ax[3,i].set_ylabel('Residual', fontsize=14)\n",
+    "    ax[3,i].set_ylabel('Residual', fontsize=7)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots(nrows=1, ncols=1, figsize=(20, 3))\n",
+    "\n",
+    "sns.lineplot(x=feat_and_lab_1.index, y=feat_and_lab_1['Mjesec'], color='dodgerblue')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "month_in_year = 12\n",
+    "feat_and_lab_1['month_sin'] = np.sin(2*np.pi*feat_and_lab_1['Mjesec']/month_in_year)\n",
+    "feat_and_lab_1['month_cos'] = np.cos(2*np.pi*feat_and_lab_1['Mjesec']/month_in_year)\n",
+    "\n",
+    "f, ax = plt.subplots(nrows=1, ncols=1, figsize=(6, 6))\n",
+    "\n",
+    "sns.scatterplot(x=feat_and_lab_1.month_sin, y=feat_and_lab_1.month_cos, color='dodgerblue')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots(nrows=len(core_columns), ncols=1, figsize=(15, 20))\n",
+    "f.suptitle('Seasonal Components of Features', fontsize=10)\n",
+    "\n",
+    "for i, column in enumerate(core_columns):\n",
+    "    sns.lineplot(x=feat_and_lab_1.index, y=feat_and_lab_1[column + '_seasonal'], ax=ax[i], color='dodgerblue', label='P25')\n",
+    "    ax[i].set_ylabel(ylabel=column, fontsize=10)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feat_and_lab_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feat_and_lab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from statsmodels.tsa.arima_model import ARIMA\n",
+    "#aa=feat_and_lab.index.values\n",
+    "aa=feat_and_lab[\"Datum i vrijeme\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#univariate_df[\"Datum i vrijeme\"]=aa\n",
+    "univariate_df=pd.DataFrame(aa)\n",
+    "#univariate_df[\"Temp.senzor vanj.1 25000099Temperatura (°C)\"]=feat_and_lab_1[\"Temp.senzor vanj.1 25000099Temperatura (°C)\"].values\n",
+    "univariate_df[\"Plin, m3\"]=feat_and_lab[\"Plin, m3\"].values\n",
+    "#univariate_df[\"Plin, m3\"]=feat_and_lab_1[\"Plin, m3\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "univariate_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_size = int(0.85 * len(feat_and_lab_1))\n",
+    "test_size = len(feat_and_lab_1) - train_size\n",
+    "\n",
+    "\n",
+    "train = univariate_df.iloc[:train_size, :]\n",
+    "\n",
+    "x_train, y_train = (univariate_df.iloc[:train_size, 0]), (univariate_df.iloc[:train_size,1 ])\n",
+    "x_valid, y_valid = (univariate_df.iloc[train_size:, 0]), (univariate_df.iloc[train_size:, 1])\n",
+    "\n",
+    "print(len(train), len(x_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_valid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit model\n",
+    "model = ARIMA(y_train, order=(1,1,1))\n",
+    "model_fit = model.fit()\n",
+    "\n",
+    "# Prediction with ARIMA\n",
+    "y_pred, se, conf = model_fit.forecast(14977)\n",
+    "\n",
+    "# Calcuate metrics\n",
+    "score_mae = mean_absolute_error(y_valid, y_pred)\n",
+    "score_rmse = math.sqrt(mean_squared_error(y_valid, y_pred))\n",
+    "\n",
+    "print('RMSE: {}'.format(score_rmse))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_valid.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots(1)\n",
+    "f.set_figheight(6)\n",
+    "f.set_figwidth(15)\n",
+    "\n",
+    "model_fit.plot_predict(1, 134, ax=ax)\n",
+    "sns.lineplot(x=x_valid.index, y=y_valid, ax=ax, color='orange', label='Ground truth') #navajowhite\n",
+    "\n",
+    "ax.set_title(f'Prediction \\n MAE: {score_mae:.2f}, RMSE: {score_rmse:.2f}', fontsize=14)\n",
+    "ax.set_xlabel(xlabel='Date', fontsize=14)\n",
+    "ax.set_ylabel(ylabel='Depth to Groundwater', fontsize=14)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import date\n",
+    "d0 = date(2015, 10, 15)\n",
+    "d1 = date(2016, 4, 15)\n",
+    "delta = d1 - d0\n",
+    "print(delta.days)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "data = univariate_df.filter([\"Plin, m3\"])\n",
+    "#Convert the dataframe to a numpy array\n",
+    "dataset = data.values\n",
+    "\n",
+    "scaler = MinMaxScaler(feature_range=(-1, 0))\n",
+    "scaled_data = scaler.fit_transform(dataset)\n",
+    "\n",
+    "scaled_data[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defines the rolling window\n",
+    "look_back = 0\n",
+    "# Split into train and test sets\n",
+    "train, test = scaled_data[:train_size-look_back,:], scaled_data[train_size-look_back:,:]\n",
+    "\n",
+    "\n",
+    "def create_dataset(dataset,look_back=1): \n",
+    "    X, Y = [], []\n",
+    "    for i in range(look_back, len(dataset)):\n",
+    "        a = dataset[i-look_back:i, 0]\n",
+    "        X.append(a)\n",
+    "        Y.append(dataset[i, 0])\n",
+    "    return np.array(X), np.array(Y)\n",
+    "\n",
+    "x_train, y_train = create_dataset(train, look_back)\n",
+    "x_test, y_test = create_dataset(test, look_back)\n",
+    "\n",
+    "# reshape input to be [samples, time steps, features]\n",
+    "x_train = np.reshape(x_train, (x_train.shape[0], 1, x_train.shape[1]))\n",
+    "x_test = np.reshape(x_test, (x_test.shape[0], 1, x_test.shape[1]))\n",
+    "\n",
+    "print(len(x_train), len(x_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow import keras\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, LSTM\n",
+    "\n",
+    "#Build the LSTM model\n",
+    "model = Sequential()\n",
+    "model.add(LSTM(128, return_sequences=True, input_shape=(x_train.shape[1], x_train.shape[2])))\n",
+    "model.add(LSTM(64, return_sequences=False))\n",
+    "model.add(Dense(25))\n",
+    "model.add(Dense(1))\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam', loss='mean_squared_error')\n",
+    "\n",
+    "#Train the model\n",
+    "model.fit(x_train, y_train, batch_size=1, epochs=5, validation_data=(x_test, y_test))\n",
+    "\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lets predict with the model\n",
+    "train_predict = model.predict(x_train)\n",
+    "test_predict = model.predict(x_test)\n",
+    "\n",
+    "# invert predictions\n",
+    "train_predict = scaler.inverse_transform(train_predict)\n",
+    "y_train = scaler.inverse_transform([y_train])\n",
+    "\n",
+    "test_predict = scaler.inverse_transform(test_predict)\n",
+    "y_test = scaler.inverse_transform([y_test])\n",
+    "\n",
+    "# Get the root mean squared error (RMSE) and MAE\n",
+    "score_rmse = np.sqrt(mean_squared_error(y_test[0], test_predict[:,0]))\n",
+    "score_mae = mean_absolute_error(y_test[0], test_predict[:,0])\n",
+    "print('RMSE: {}'.format(score_rmse))"
    ]
   },
   {
@@ -468,7 +814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
