--- a/Merging_files.ipynb
+++ b/Merging_files.ipynb
@@ -85,8 +85,16 @@
     "    df=[None]*len(selected_sheet_names)\n",
     "    df=[pd.read_excel('Measurement data\\\\'+file, sheet_name=i, usecols=column_indices[selected_sheet_names.index(i)]) for i in selected_sheet_names]\n",
     "    df1=pd.concat(df[:],axis=1,)\n",
-    "    df_all_files[file_names.index(file)]=df1"
+    "    df_all_files[file_names.index(file)]=df1\n",
+    "print(selected_sheet_names)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -208,9 +216,9 @@
     "new_names=[\"\",selected_sheet_names[0],selected_sheet_names[1],selected_sheet_names[1],selected_sheet_names[2],selected_sheet_names[2],\n",
     "selected_sheet_names[3],selected_sheet_names[4],selected_sheet_names[5],selected_sheet_names[6],selected_sheet_names[6],selected_sheet_names[7],\n",
     "selected_sheet_names[7],selected_sheet_names[8],selected_sheet_names[8],selected_sheet_names[9],\n",
-    "selected_sheet_names[9],selected_sheet_names[10],selected_sheet_names[10],selected_sheet_names[10],selected_sheet_names[10],\n",
-    "selected_sheet_names[10],selected_sheet_names[11],selected_sheet_names[11],selected_sheet_names[11],\n",
-    "selected_sheet_names[11],selected_sheet_names[11],selected_sheet_names[12],selected_sheet_names[12],selected_sheet_names[12],\n",
+    "selected_sheet_names[9],selected_sheet_names[9],selected_sheet_names[9],selected_sheet_names[9],selected_sheet_names[10],\n",
+    "selected_sheet_names[10],selected_sheet_names[10],selected_sheet_names[10],selected_sheet_names[10],\n",
+    "selected_sheet_names[11],selected_sheet_names[11],selected_sheet_names[11],selected_sheet_names[11],selected_sheet_names[11],\n",
     "selected_sheet_names[12],selected_sheet_names[12],selected_sheet_names[13],selected_sheet_names[13],\n",
     "selected_sheet_names[14],selected_sheet_names[14],selected_sheet_names[15],selected_sheet_names[15],\n",
     "selected_sheet_names[16],selected_sheet_names[16],selected_sheet_names[17],selected_sheet_names[17],\n",
@@ -307,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
