--- a/Untitled - Copy - Copy.ipynb
+++ b/Untitled - Copy - Copy.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "389c5195",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aa415ae7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b5a50321",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "925ee23d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "46c22587",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "658d4dac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,18 +77,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b36e9ec6",
    "metadata": {},
    "outputs": [],
    "source": [
     "file=file.drop(['Vodomjer hidrant 10058705Voda (m3)', 'Brojilo el.energije ko 46621646El.energija VT (kWh)', 'Brojilo el.energije ko 46621646El.energija MT (kWh)','Brojilo el.energije po 38878959El.energija VT (kWh)',\n",
     "       'Brojilo el.energije po 38878959El.energija MT (kWh)',\n",
     "       'Brojilo el.energije kl 46868995El.energija VT (kWh)',\n",
-    "       'Brojilo el.energije kl 46868995El.energija MT (kWh)', 'Kalorimetar 2 39024724Topl.energija (MWh)','Kalorimetar 3 39024787Temp.pol.voda (°C)','Kalorimetar 3 39024787Temp.pov.voda (°C)'],axis=1)"
+    "       'Brojilo el.energije kl 46868995El.energija MT (kWh)', 'Kalorimetar 2 39024724Topl.energija (MWh)'],axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a61149d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5816e9b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,15 +110,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "78ea5add",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file[\"Temp sr\"]=(file['Temp.senzor un.1 24003403Temp.pol.voda (°C)']+file['Temp.senzor un.1 24003403Temp.pov.voda (°C)'])/2"
+    "file[\"Temp sr_K1\"]=(file['Kalorimetar 1 39024788Temp.pol.voda (°C)']+file['Kalorimetar 1 39024788Temp.pov.voda (°C)'])/2\n",
+    "file[\"Temp sr_K3\"]=(file['Kalorimetar 3 39024787Temp.pol.voda (°C)']+file['Kalorimetar 3 39024787Temp.pol.voda (°C)'])/2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "43d1346a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,15 +135,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "359f8ba2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file[\"Grijanje\"]=list(map(heat,file[\"Temp sr\"].values))"
+    "file[\"Grijanje_K1\"]=list(map(heat,file[\"Temp sr_K1\"].values))\n",
+    "file[\"Grijanje_K3\"]=list(map(heat,file[\"Temp sr_K3\"].values))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "76f6bed3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,6 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9c8d8018",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,37 +164,201 @@
     "for name,group in aa:\n",
     "\n",
     "    values=[-1]*len(aa.get_group(name))\n",
-    "    if aa.get_group(name).empty==False:\n",
-    "        b=np.argwhere(aa.get_group(name)[\"Grijanje\"].values==1)\n",
+    "    if aa.get_group(name)[\"Grijanje_K1\"].empty==False:\n",
+    "        b=np.argwhere(aa.get_group(name)[\"Grijanje_K1\"].values==1)\n",
     "        enum=list(enumerate(b))\n",
     "        for k,val in enumerate(b):\n",
     "            values[val[0]]=enum[k][0]  \n",
     "    else:pass\n",
-    "    values_tot.append(values)\n",
-    "                    "
+    "    values_tot.append(values)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "64b99aed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "kk=np.concatenate(values_tot)"
+    "file[\"Broj sati grijanja_K1\"]=np.concatenate(values_tot)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "171c57d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file[\"Broj sati grijanja\"]=np.concatenate(values_tot)"
+    "values_tot=[]\n",
+    "for name,group in aa:\n",
+    "\n",
+    "    values=[-1]*len(aa.get_group(name))\n",
+    "    if aa.get_group(name)[\"Grijanje_K3\"].empty==False:\n",
+    "        b=np.argwhere(aa.get_group(name)[\"Grijanje_K3\"].values==1)\n",
+    "        enum=list(enumerate(b))\n",
+    "        for k,val in enumerate(b):\n",
+    "            values[val[0]]=enum[k][0]  \n",
+    "    else:pass\n",
+    "    values_tot.append(values)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5be3d789",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file[\"Broj sati grijanja_K3\"]=np.concatenate(values_tot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b7dcda7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa=file.groupby([\"Godina\",\"Dan u godini\"], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0962af6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values_xbefore=[]\n",
+    "values_xafter=[]\n",
+    "for name,group in aa:\n",
+    "    values_before=[None]*len(aa.get_group(name))\n",
+    "    values_after=[None]*len(aa.get_group(name))\n",
+    "    if aa.get_group(name)[\"Grijanje_K1\"].empty==False:\n",
+    "        \n",
+    "        b=np.argwhere(aa.get_group(name)[\"Grijanje_K1\"].values)\n",
+    "        if b.size==0:\n",
+    "            values_before=values_before\n",
+    "            values_after=values_after\n",
+    "        else:\n",
+    "            values_before[b[0][0]]=b[0][0]\n",
+    "            values_after[b[-1][0]]=24-b[-1][0]\n",
+    "        \n",
+    "    values_xbefore.append(values_before)\n",
+    "    values_xafter.append(values_after)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6750750f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_xbefore=np.concatenate(values_xbefore)\n",
+    "val_xafter=np.concatenate(values_xafter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d3c4bad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file[\"Negrijano_K1_prije\"]=np.concatenate(values_xbefore)\n",
+    "file[\"Negrijano_K1_poslije\"]=np.concatenate(values_xafter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdfab956",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bb=file.groupby([\"Godina\",\"Mjesec\",\"Dan u mjesecu\"], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddfdf878",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_date_s1=file[file[\"Datum i vrijeme\"]=='10/01/2015  00:00:00 AM'].index.values\n",
+    "end_date_s1=file[file[\"Datum i vrijeme\"]=='05/09/2016  11:00:00 PM'].index.values\n",
+    "start_date_s2=file[file[\"Datum i vrijeme\"]=='09/30/2016  00:00:00 AM'].index.values\n",
+    "end_date_s2=file[file[\"Datum i vrijeme\"]=='04/25/2017  06:00:00 AM'].index.values\n",
+    "start_date_s3=file[file[\"Datum i vrijeme\"]=='10/01/2017  00:00:00 AM'].index.values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "814734aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S1=file.loc[start_date_s1[0]:end_date_s1[0]]\n",
+    "S2=file.loc[start_date_s2[0]:end_date_s2[0]]\n",
+    "S3=file.loc[start_date_s3[0]:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd86a7e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values_1=[None]*len(S1[\"Negrijano_K1_prije\"].values)\n",
+    "values_1[0]=\"-5\"\n",
+    "num_before=np.argwhere(S1[\"Negrijano_K1_prije\"].values)\n",
+    "num_after=np.argwhere(S1[\"Negrijano_K1_poslije\"].values)\n",
+    "values_1[1:]=[num_before[val][0]-num_after[val-1][0] for val in range(1,len(num_before))]\n",
+    "\n",
+    "values_2=[None]*len(S2[\"Negrijano_K1_prije\"].values)\n",
+    "values_2[0]=\"-5\"\n",
+    "num_before=np.argwhere(S2[\"Negrijano_K1_prije\"].values)\n",
+    "num_after=np.argwhere(S2[\"Negrijano_K1_poslije\"].values)\n",
+    "values_2[1:]=[num_before[val][0]-num_after[val-1][0] for val in range(1,len(num_before))]\n",
+    "\n",
+    "values_3=[None]*len(S3[\"Negrijano_K1_prije\"].values)\n",
+    "values_3[0]=\"-5\"#pocetak sezone\n",
+    "num_before=np.argwhere(S3[\"Negrijano_K1_prije\"].values)\n",
+    "num_after=np.argwhere(S3[\"Negrijano_K1_poslije\"].values)\n",
+    "values_3[1:]=[num_before[val][0]-num_after[val-1][0] for val in range(1,len(num_before))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "256fa19d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_unheat=np.concatenate([values_1,values_2,values_3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0434660",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file[\"Negrijano\"]=np.empty(len(file[\"Negrijano_K1_prije\"].values))\n",
+    "for val,k in list(enumerate(np.argwhere(file[\"Negrijano_K1_prije\"].values))):\n",
+    "    file[\"Negrijano\"].values[[k][0]]=val_unheat[val]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2067f3ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,6 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "681b1c80",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -195,6 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "00b7f71b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -202,6 +384,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bc0af58d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values_xbefore=[]\n",
+    "values_xafter=[]\n",
+    "for name,group i:\n",
+    "    \n",
+    "    \n",
+    "    values_unheatbef=\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    if aa.get_group(name)[\"Grijanje_K1\"].empty==False:\n",
+    "        \n",
+    "        b=np.argwhere(aa.get_group(name)[\"Grijanje_K1\"].values)\n",
+    "        if b.size==0:\n",
+    "            values_before=values_before\n",
+    "            values_after=values_after\n",
+    "        else:\n",
+    "            values_before[b[0][0]]=b[0][0]\n",
+    "            values_after[b[-1][0]]=24-b[-1][0]\n",
+    "        \n",
+    "    values_xbefore.append(values_before)\n",
+    "    values_xafter.append(values_after)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf6374bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "971aca9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,6 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7070d5fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,6 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e3088830",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,6 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d8649c54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,6 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e8b7f4d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,6 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "81d04a66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,6 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4dbf854d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,6 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7df54e86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,6 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ee390d12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,6 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b749690b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,6 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dd95a65a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,6 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e8048caf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,6 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bce63c9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,6 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "06d51330",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,6 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "47a2e646",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,6 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9f7cee74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,6 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "56ee8ec4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,6 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dd93461e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,6 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4dcc3ec9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,6 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "adad8656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,6 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d4dcc41c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,6 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "792c3432",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,6 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1a5f3c59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,6 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1f9b626c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,6 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8d0ae366",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,6 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5d053e3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,6 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f93a51dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,6 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "af5d34e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,6 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8f0af1fc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -534,6 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c540deea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,6 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fcf45798",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,6 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "349f3e25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,6 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cf29e178",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,6 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "63ada679",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,6 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9dcb037e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,6 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "60af31c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,6 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b488a72b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,6 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "68ce19eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,6 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0e175e1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,6 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "426966ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,6 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1ec67e36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,6 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "91e077e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,6 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bf07c5ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,6 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fb62d640",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,6 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "323e5cf0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -785,7 +1051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
