--- a/Models.ipynb
+++ b/Models.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ab689eda",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eee417b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5aa1df9b",
    "metadata": {},
    "outputs": [
     {
@@ -144,8 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ae421811",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +161,7 @@
        "Length: 95, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,8 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "710ac70a",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -293,8 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ca4b31d1",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,8 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "8cacc756",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +317,7 @@
        "Length: 95, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,8 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "7f09fad9",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,8 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "740cc3e1",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +433,7 @@
        "2015-10-01 02:00:00           0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,8 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2b3b0117",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,8 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "1d79b1db",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,8 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cc5ee744",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,8 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b64a2351",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +543,7 @@
        "2                                      21.04  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,8 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "222ce061",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +570,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,8 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "2e4a6cfe",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,8 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "443f00a9",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +607,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,8 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "8117d274",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,8 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "75d13cf5",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,8 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "82d403f7",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +708,7 @@
        "3   1.036271                                          Praznik"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,8 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "a55e685e",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +789,7 @@
        "3   2.389338                                       Radni sati"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,8 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "9dd59855",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,35 +821,21 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0e7504ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fig, ax = plt.subplots(ncols=1, nrows=4, sharex=True, figsize=(16,8))\n",
+    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "\n",
-    "#for i, column in enumerate(core_columns):\n",
-    "    \n",
-    "    #res = seasonal_decompose(feat_and_lab[column], freq=24, model='additive', extrapolate_trend='freq')\n",
+    "core_columns =  [\"Temp.senzor un.4 24004658Temperatura (°C) (t-1)\"]\n",
     "\n",
-    "   # ax[0,i].set_title('Decomposition of {}'.format(column), fontsize=16)\n",
-    "   # res.observed.plot(ax=ax[0,i], legend=False, color='dodgerblue')\n",
-    " #   ax[0,i].set_ylabel('Observed', fontsize=14)\n",
-    "\n",
-    "  #  res.trend.plot(ax=ax[1,i], legend=False, color='dodgerblue')\n",
-    "#    ax[1,i].set_ylabel('Trend', fontsize=14)\n",
-    "\n",
-    "    #res.seasonal.plot(ax=ax[2,i], legend=False, color='dodgerblue')\n",
-    "    #ax[2,i].set_ylabel('Seasonal', fontsize=14)\n",
-    "    \n",
-    "   # res.resid.plot(ax=ax[3,i], legend=False, color='dodgerblue')\n",
-    "   # ax[3,i].set_ylabel('Residual', fontsize=14)\n",
-    "\n",
-    "#plt.show()"
+    "for column in core_columns:\n",
+    "    decomp = seasonal_decompose(feat_and_lab[column], period=24, model='additive', extrapolate_trend='freq')\n",
+    "    feat_and_lab[f\"{column}_trend\"] = decomp.trend\n",
+    "    feat_and_lab[f\"{column}_seasonal\"] = decomp.seasonal"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e1ed5881",
    "metadata": {},
    "source": [
     "#XGB"
@@ -879,7 +844,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f6c02fc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +855,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f23713c0",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +881,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4dbb7501",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +891,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "52a14f82",
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +917,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "5581ec1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +932,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a2014741",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +963,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5af6ff0f",
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +986,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0f13610f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +995,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "398ab9a7",
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1018,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a3c333be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1029,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "7ba501a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1038,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "88fb042c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1047,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "351306a2",
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1076,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "72e4f8b0",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1105,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "6125245c",
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1128,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "9005255f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1140,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "55419745",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,7 +1149,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "38af6484",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1160,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c46b4d22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1169,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a7d230e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1201,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9637dace",
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1311,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "fb10e076",
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1331,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "542f1cc8",
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1356,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "fb39c45b",
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1376,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a589c6fa",
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1396,6 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "f4b1a4dc",
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1424,6 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "db136b1a",
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1506,6 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "4cd8a4d1",
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1529,6 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "84f1aa99",
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1574,6 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "56b0b598",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1606,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "cbfad602",
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1628,6 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "21b25686",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1642,6 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "08be2f4a",
    "metadata": {},
    "outputs": [
     {
@@ -1840,7 +1772,6 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "3b362f65",
    "metadata": {},
    "outputs": [
     {
@@ -1892,7 +1823,6 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "34aed6c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1939,7 +1869,6 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "734620c1",
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +1959,6 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "1451ab5f",
    "metadata": {},
    "outputs": [
     {
@@ -2121,7 +2049,6 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "2eccf743",
    "metadata": {},
    "outputs": [
     {
@@ -2142,7 +2069,6 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "10f74681",
    "metadata": {},
    "outputs": [
     {
@@ -2163,7 +2089,6 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "583b5e82",
    "metadata": {},
    "outputs": [
     {
@@ -2202,7 +2127,6 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "26d44d84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2216,7 +2140,6 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b51de56e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2235,7 +2158,6 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "b4cf581d",
    "metadata": {},
    "outputs": [
     {
@@ -2257,7 +2179,6 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "095810c4",
    "metadata": {},
    "outputs": [
     {
@@ -2350,7 +2271,6 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "9b7efb93",
    "metadata": {},
    "outputs": [
     {
@@ -2389,7 +2309,6 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "78f93e20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2400,7 +2319,6 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "2d148225",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2410,7 +2328,6 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "a15d1330",
    "metadata": {},
    "outputs": [
     {
@@ -2436,7 +2353,6 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "4ccabf46",
    "metadata": {},
    "outputs": [
     {
@@ -2455,7 +2371,6 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "85e1ed59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2465,7 +2380,6 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "23d02f90",
    "metadata": {},
    "outputs": [
     {
@@ -2492,7 +2406,6 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "da96f061",
    "metadata": {},
    "outputs": [
     {
@@ -2513,7 +2426,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cb9cf5d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2535,7 +2447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
